[gd_scene load_steps=69 format=2]

[ext_resource path="res://scenes/tile/volcanic/lvl 1 v/volcanic1TileBoss.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Scripts/Managers/AudioLevels.gd" type="Script" id=2]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_3.png" type="Texture" id=3]
[ext_resource path="res://assets/Scripts/UI/OptionMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/Scripts/Player/camera/CameraShake.gd" type="Script" id=5]
[ext_resource path="res://scenes/pg/Blasto.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/UI/blasto/barra vita.png" type="Texture" id=7]
[ext_resource path="res://assets/Scripts/Managers/ost.gd" type="Script" id=8]
[ext_resource path="res://assets/Scripts/UI/PlayerHealthBar.gd" type="Script" id=9]
[ext_resource path="res://assets/Scripts/Managers/KronusPhaseManager.gd" type="Script" id=10]
[ext_resource path="res://assets/Scripts/FloorCreator.gd" type="Script" id=11]
[ext_resource path="res://assets/img/UI/blasto/cornice barra vita.png" type="Texture" id=12]
[ext_resource path="res://assets/Scripts/Managers/ost pause.gd" type="Script" id=13]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_2.png" type="Texture" id=14]
[ext_resource path="res://assets/img/UI/rating/S.png" type="Texture" id=15]
[ext_resource path="res://assets/img/UI/you win cornice.png" type="Texture" id=16]
[ext_resource path="res://assets/img/UI/blasto/icona numero vite.png" type="Texture" id=17]
[ext_resource path="res://scenes/pg/bosses/kronus/KronusBoss3.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Scripts/Managers/BossSceneManager.gd" type="Script" id=19]
[ext_resource path="res://assets/img/UI/rating/A.png" type="Texture" id=20]
[ext_resource path="res://scenes/pg/bosses/kronus/kronusBoss2.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/img/UI/rating/B.png" type="Texture" id=22]
[ext_resource path="res://assets/img/UI/game over cornice.png" type="Texture" id=23]
[ext_resource path="res://assets/fonts/MainMenuFont.tres" type="DynamicFont" id=24]
[ext_resource path="res://assets/img/UI/rating/C.png" type="Texture" id=25]
[ext_resource path="res://assets/Scripts/UI/Rating.gd" type="Script" id=26]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_11.png" type="Texture" id=27]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_20.png" type="Texture" id=28]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_16.png" type="Texture" id=29]
[ext_resource path="res://assets/Scripts/Player/camera/cameraController.gd" type="Script" id=30]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_1.png" type="Texture" id=31]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_17.png" type="Texture" id=32]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_9.png" type="Texture" id=33]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_12.png" type="Texture" id=34]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_19.png" type="Texture" id=35]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_14.png" type="Texture" id=36]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_4.png" type="Texture" id=37]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_18.png" type="Texture" id=38]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_6.png" type="Texture" id=39]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_8.png" type="Texture" id=40]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_15.png" type="Texture" id=41]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_10.png" type="Texture" id=42]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_5.png" type="Texture" id=43]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_7.png" type="Texture" id=44]
[ext_resource path="res://assets/img/frontground/lvl volcanic/Wall_PH_13.png" type="Texture" id=45]
[ext_resource path="res://scenes/tile/volcanic/lvl 1 v/volcanic1TileBoss3.tscn" type="PackedScene" id=46]
[ext_resource path="res://assets/audio/ost/win.oggvorbis.ogg" type="AudioStream" id=47]
[ext_resource path="res://assets/audio/ost/lose.oggvorbis.ogg" type="AudioStream" id=48]
[ext_resource path="res://assets/Scripts/Managers/AudioButtons.gd" type="Script" id=49]
[ext_resource path="res://assets/audio/sfx/Menu/bpSFX.ogg" type="AudioStream" id=50]
[ext_resource path="res://assets/audio/sfx/Menu/meSFX.ogg" type="AudioStream" id=51]
[ext_resource path="res://assets/audio/sfx/Levels/NextLevel.oggvorbis.ogg" type="AudioStream" id=52]
[ext_resource path="res://scenes/pg/bosses/kronus/kronusBoss1.tscn" type="PackedScene" id=53]
[ext_resource path="res://assets/audio/ost/lvl volcan/Boss_Metgos.oggvorbis.ogg" type="AudioStream" id=54]
[ext_resource path="res://assets/audio/ost/lvl volcan/Boss_Metgos_Pause.oggvorbis.ogg" type="AudioStream" id=55]
[ext_resource path="res://assets/img/UI/cerulean star/icona numero vite.png" type="Texture" id=56]
[ext_resource path="res://assets/img/UI/cerulean star/cerulean star barra vita.png" type="Texture" id=57]
[ext_resource path="res://assets/img/UI/cerulean star/cerulean star cornice vita.png" type="Texture" id=58]
[ext_resource path="res://scenes/pg/Cerulean Star.tscn" type="PackedScene" id=59]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 120.5, 119 )

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0, 0.72549, 0.164706, 1 )
border_width_top = 18
border_width_bottom = 23
border_color = Color( 0.839216, 0, 1, 1 )
shadow_color = Color( 1, 0.6, 0.6, 0.6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15748, 123.529 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1990.15, 120.176 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 42 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 45 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 35 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="testing" type="Node2D"]
position = Vector2( 63, -456 )
__meta__ = {
"_edit_horizontal_guides_": [ 1020.87 ]
}

[node name="StageManager" type="Node2D" parent="."]
position = Vector2( -680, -496 )
script = ExtResource( 19 )
next_stage = "defeat kronus"
current_level = "volcanic/LevelVolcanicBoss"

[node name="EnemiesContainer" type="Node" parent="StageManager"]
script = ExtResource( 10 )
kronus2 = ExtResource( 21 )
kronus3 = ExtResource( 18 )

[node name="KronusBoss" parent="StageManager/EnemiesContainer" instance=ExtResource( 53 )]
position = Vector2( 843, 855 )

[node name="respawnPoint" type="Node2D" parent="StageManager"]
position = Vector2( 932, 1818 )

[node name="spearZones" type="Node" parent="StageManager"]

[node name="0" type="Node2D" parent="StageManager/spearZones"]
position = Vector2( 50, 0 )

[node name="1" type="Position2D" parent="StageManager/spearZones/0"]
position = Vector2( 134, 854 )

[node name="2" type="Position2D" parent="StageManager/spearZones/0"]
position = Vector2( 174, 912 )

[node name="3" type="Position2D" parent="StageManager/spearZones/0"]
position = Vector2( 227, 959 )

[node name="4" type="Position2D" parent="StageManager/spearZones/0"]
position = Vector2( 278, 1005 )

[node name="1" type="Node2D" parent="StageManager/spearZones"]
position = Vector2( 204, 0 )

[node name="1" type="Position2D" parent="StageManager/spearZones/1"]
position = Vector2( 134, 854 )

[node name="2" type="Position2D" parent="StageManager/spearZones/1"]
position = Vector2( 174, 912 )

[node name="3" type="Position2D" parent="StageManager/spearZones/1"]
position = Vector2( 227, 959 )

[node name="4" type="Position2D" parent="StageManager/spearZones/1"]
position = Vector2( 278, 1005 )

[node name="2" type="Node2D" parent="StageManager/spearZones"]
position = Vector2( 370, 0 )

[node name="1" type="Position2D" parent="StageManager/spearZones/2"]
position = Vector2( 134, 854 )

[node name="2" type="Position2D" parent="StageManager/spearZones/2"]
position = Vector2( 174, 912 )

[node name="3" type="Position2D" parent="StageManager/spearZones/2"]
position = Vector2( 227, 959 )

[node name="4" type="Position2D" parent="StageManager/spearZones/2"]
position = Vector2( 278, 1005 )

[node name="3" type="Node2D" parent="StageManager/spearZones"]
position = Vector2( 488, 0 )

[node name="1" type="Position2D" parent="StageManager/spearZones/3"]
position = Vector2( 134, 854 )

[node name="2" type="Position2D" parent="StageManager/spearZones/3"]
position = Vector2( 174, 912 )

[node name="3" type="Position2D" parent="StageManager/spearZones/3"]
position = Vector2( 227, 959 )

[node name="4" type="Position2D" parent="StageManager/spearZones/3"]
position = Vector2( 278, 1005 )

[node name="bossPoints" type="Node" parent="StageManager"]

[node name="left" type="Position2D" parent="StageManager/bossPoints"]
position = Vector2( 838, 857 )

[node name="right" type="Position2D" parent="StageManager/bossPoints"]
position = Vector2( 109, 857 )

[node name="lava pool" type="Node" parent="StageManager"]

[node name="floor2" type="Node2D" parent="StageManager/lava pool"]
visible = false
position = Vector2( -1089, 53 )
scale = Vector2( 0.698, 1 )
z_index = -2
script = ExtResource( 11 )
increment = 1350
n_positions = 1
scenes = [ ExtResource( 46 ) ]

[node name="StaticBody2D" type="StaticBody2D" parent="StageManager/lava pool"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StageManager/lava pool/StaticBody2D"]
position = Vector2( 613.5, 834 )
shape = SubResource( 44 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 612, 779 )

[node name="GAME OVER" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 958.351, 539.915 )
scale = Vector2( 1.00097, 1.00097 )
z_index = 1
texture = ExtResource( 23 )

[node name="WIN" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 963.059, 541.221 )
z_index = 1
texture = ExtResource( 16 )

[node name="LifesList" type="Node2D" parent="GUI/UI"]

[node name="Blasto" type="Node2D" parent="GUI/UI/LifesList"]

[node name="Ceru1" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 235, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="Ceru2" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 204, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="Ceru3" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 172, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="Ceru" type="Node2D" parent="GUI/UI/LifesList"]

[node name="Ceru1" type="Sprite" parent="GUI/UI/LifesList/Ceru"]
position = Vector2( 815, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 56 )

[node name="Ceru2" type="Sprite" parent="GUI/UI/LifesList/Ceru"]
position = Vector2( 784, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 56 )

[node name="Ceru3" type="Sprite" parent="GUI/UI/LifesList/Ceru"]
position = Vector2( 752, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 56 )

[node name="HealthPlayerContainer" type="Node2D" parent="GUI/UI"]
script = ExtResource( 9 )

[node name="Blasto" type="Node2D" parent="GUI/UI/HealthPlayerContainer"]

[node name="ConiceBarraVita" type="Sprite" parent="GUI/UI/HealthPlayerContainer/Blasto"]
position = Vector2( 293.239, 82.7536 )
scale = Vector2( 0.295394, 0.289558 )
texture = ExtResource( 12 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthPlayerContainer/Blasto"]
margin_left = 146.0
margin_top = 57.0
margin_right = 1507.0
margin_bottom = 232.0
rect_scale = Vector2( 0.293, 0.296 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 7 )

[node name="Ceru" type="Node2D" parent="GUI/UI/HealthPlayerContainer"]

[node name="ConiceBarraVita" type="Sprite" parent="GUI/UI/HealthPlayerContainer/Ceru"]
position = Vector2( 880.239, 82.7536 )
scale = Vector2( 0.295394, 0.289558 )
texture = ExtResource( 58 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthPlayerContainer/Ceru"]
margin_left = 734.0
margin_top = 56.0
margin_right = 2096.0
margin_bottom = 231.0
rect_scale = Vector2( 0.293, 0.296 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 57 )

[node name="Rating" type="Control" parent="GUI/UI"]
margin_left = 1764.0
margin_top = 954.0
margin_right = 1804.0
margin_bottom = 994.0
script = ExtResource( 26 )
rate_list = [ ExtResource( 25 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 15 ) ]
boss = true

[node name="Sprite" type="Sprite" parent="GUI/UI/Rating"]
visible = false
scale = Vector2( 0.520833, 0.520833 )
z_index = 1
texture = ExtResource( 20 )

[node name="pauseMenu" type="Control" parent="GUI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="mainPauseMenu" type="Control" parent="GUI/pauseMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ReturnBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 895.843
margin_top = 370.715
margin_right = 1080.84
margin_bottom = 455.715
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "RETURN"

[node name="RestartLevelBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 803.0
margin_top = 462.0
margin_right = 1164.0
margin_bottom = 547.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "RESTART LEVEL"

[node name="OptionBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 886.404
margin_top = 551.0
margin_right = 1082.4
margin_bottom = 636.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "OPTIONS"

[node name="MainMenuBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 634.061
margin_right = 1123.87
margin_bottom = 719.061
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "MAIN MENU"

[node name="QuitBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 723.0
margin_right = 1123.87
margin_bottom = 808.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "QUIT"

[node name="OptionMenu" type="Control" parent="GUI/pauseMenu"]
visible = false
margin_left = -4.48981
margin_top = -204.288
margin_right = 35.5102
margin_bottom = -164.288

[node name="backToPauseBtn" type="Button" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 1003.0
margin_top = 555.0
margin_right = 1337.0
margin_bottom = 651.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 36 )
custom_styles/normal = SubResource( 37 )
action_mode = 0
text = "BACK"

[node name="checkFullscreen" type="CheckBox" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 554.0
margin_right = 819.0
margin_bottom = 651.0
mouse_filter = 1
custom_colors/font_color_disabled = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_fonts/font = ExtResource( 24 )
text = "FullScreen"

[node name="music" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 675.0
margin_right = 721.0
margin_bottom = 765.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 24 )
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 732.461
margin_right = 1339.55
margin_bottom = 855.459
custom_styles/slider = SubResource( 38 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="sfx" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 879.0
margin_right = 753.0
margin_bottom = 969.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 24 )
text = "EFFECTS"

[node name="SFXSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 930.0
margin_right = 1339.55
margin_bottom = 1053.0
custom_styles/slider = SubResource( 38 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="border" type="Node" parent="." groups=["border"]]

[node name="Top" type="StaticBody2D" parent="border"]
position = Vector2( 132.312, 444.188 )
scale = Vector2( 0.58, 0.57 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Top"]
position = Vector2( 15525.4, 415.184 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="border/Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Top/Area2D"]
position = Vector2( 15525.4, 415.184 )
shape = SubResource( 6 )

[node name="Left" type="StaticBody2D" parent="border" groups=["border"]]
position = Vector2( 386.667, 11.83 )
rotation = 1.5708
scale = Vector2( 0.57, 0.58 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Left"]
position = Vector2( 870.27, 780.269 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="border/Left"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Left/Area2D"]
position = Vector2( 870.27, 780.269 )
shape = SubResource( 7 )

[node name="Right" type="StaticBody2D" parent="border"]
position = Vector2( 1932.8, 13.7178 )
rotation = 1.5708
scale = Vector2( 0.57, 0.58 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Right"]
position = Vector2( 870.135, 1606.41 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="border/Right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Right/Area2D"]
position = Vector2( 870.135, 1606.41 )
shape = SubResource( 7 )

[node name="Bottom" type="StaticBody2D" parent="border"]
position = Vector2( 3.17841, 556.951 )
scale = Vector2( 0.58, 0.57 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Bottom"]
position = Vector2( 14914.6, 812.236 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="border/Bottom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Bottom/Area2D"]
position = Vector2( 14915.3, 810.945 )
shape = SubResource( 6 )

[node name="PlayersList" type="Node2D" parent="."]

[node name="Blasto" parent="PlayersList" instance=ExtResource( 6 )]
position = Vector2( 26, 1296 )
scale = Vector2( 1, 1 )
boss = true

[node name="Ceru Star" parent="PlayersList" instance=ExtResource( 59 )]
position = Vector2( 77, 1356 )
scale = Vector2( 1, 1 )
z_index = 1
isPlayerTwo = true
boss = true

[node name="obj" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 329, 1208 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 379
limit_bottom = 1020
limit_smoothed = true
drag_margin_h_enabled = true
smoothing_enabled = true
drag_margin_left = 0.11
drag_margin_right = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 30 )
__meta__ = {
"_editor_description_": ""
}

[node name="shake" type="Node2D" parent="Camera2D"]
script = ExtResource( 5 )
boss = true
randomShackeStrenght = 10.0

[node name="floor" type="Node2D" parent="."]
position = Vector2( -1152, 509 )
scale = Vector2( 0.698, 1 )
z_index = -2
script = ExtResource( 11 )
increment = 1350
n_positions = 1
scenes = [ ExtResource( 1 ) ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="WallPh1" type="AnimatedSprite" parent="ParallaxBackground"]
position = Vector2( 960, 367 )
frames = SubResource( 43 )
frame = 15
playing = true

[node name="Audio" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Intro_Section" type="AudioStreamPlayer" parent="Audio" groups=["pausable"]]
bus = "Music"
script = ExtResource( 8 )

[node name="Main_Section" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 54 )
volume_db = -4.0
autoplay = true
bus = "Music"
script = ExtResource( 8 )
actualPlaying = true

[node name="Pause_Section" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 55 )
bus = "Music"
script = ExtResource( 13 )

[node name="NextArea" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 52 )
volume_db = 3.0
bus = "SFX"

[node name="Win" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 47 )
volume_db = -3.0
bus = "Music"

[node name="Lose" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 48 )
bus = "Music"

[node name="PauseMenu" type="Node2D" parent="Audio"]
pause_mode = 2
script = ExtResource( 49 )

[node name="ButtonPressed" type="AudioStreamPlayer" parent="Audio/PauseMenu"]
pause_mode = 2
stream = ExtResource( 50 )
bus = "SFX"

[node name="MouseEntered" type="AudioStreamPlayer" parent="Audio/PauseMenu"]
pause_mode = 2
stream = ExtResource( 51 )
bus = "SFX"

[connection signal="hasDied" from="StageManager/EnemiesContainer/KronusBoss" to="StageManager/EnemiesContainer" method="_on_KronusBoss_hasDied"]
[connection signal="visibility_changed" from="GUI/UI/GAME OVER" to="Audio" method="_on_GAME_OVER_visibility_changed"]
[connection signal="visibility_changed" from="GUI/UI/WIN" to="Audio" method="_on_WIN_visibility_changed"]
[connection signal="value_changed" from="GUI/UI/HealthPlayerContainer/Blasto/HealthBar" to="PlayersList/Blasto" method="_on_HealthBar_value_changed"]
[connection signal="value_changed" from="GUI/UI/HealthPlayerContainer/Ceru/HealthBar" to="PlayersList/Ceru Star" method="_on_HealthBar_value_changed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/mainPauseMenu/ReturnBtn" to="Audio/PauseMenu" method="_on_ReturnBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/ReturnBtn" to="GUI/pauseMenu" method="_on_ReturnBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/ReturnBtn" to="Audio/PauseMenu" method="_on_ReturnBtn_pressed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/mainPauseMenu/RestartLevelBtn" to="Audio/PauseMenu" method="_on_RestartLevelBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/RestartLevelBtn" to="GUI/pauseMenu" method="_on_RestartLevelBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/RestartLevelBtn" to="Audio/PauseMenu" method="_on_RestartLevelBtn_pressed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/mainPauseMenu/OptionBtn" to="Audio/PauseMenu" method="_on_OptionBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/OptionBtn" to="GUI/pauseMenu" method="_on_OptionBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/OptionBtn" to="Audio/PauseMenu" method="_on_OptionBtn_pressed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/mainPauseMenu/MainMenuBtn" to="Audio/PauseMenu" method="_on_MainMenuBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/MainMenuBtn" to="GUI/pauseMenu" method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/MainMenuBtn" to="Audio/PauseMenu" method="_on_MainMenuBtn_pressed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/mainPauseMenu/QuitBtn" to="Audio/PauseMenu" method="_on_QuitBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/QuitBtn" to="GUI/pauseMenu" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/QuitBtn" to="Audio/PauseMenu" method="_on_QuitBtn_pressed"]
[connection signal="mouse_entered" from="GUI/pauseMenu/OptionMenu/backToPauseBtn" to="Audio/PauseMenu" method="_on_backToPauseBtn_mouse_entered"]
[connection signal="pressed" from="GUI/pauseMenu/OptionMenu/backToPauseBtn" to="GUI/pauseMenu" method="_on_backToPauseBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/OptionMenu/backToPauseBtn" to="Audio/PauseMenu" method="_on_backToPauseBtn_pressed"]
[connection signal="toggled" from="GUI/pauseMenu/OptionMenu/checkFullscreen" to="GUI/pauseMenu" method="_on_checkFullscreen_toggled"]
[connection signal="toggled" from="GUI/pauseMenu/OptionMenu/checkFullscreen" to="Audio/PauseMenu" method="_on_checkFullscreen_toggled"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/MusicSlider" to="GUI/pauseMenu" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/SFXSlider" to="GUI/pauseMenu" method="_on_SFXSlider_value_changed"]
[connection signal="death" from="PlayersList/Blasto" to="StageManager" method="_on_Blasto_death"]
[connection signal="update_healthbar" from="PlayersList/Blasto" to="GUI/UI/HealthPlayerContainer" method="_on_Blasto_update_healthbar"]
[connection signal="death" from="PlayersList/Ceru Star" to="StageManager" method="_on_Ceru_Star_death"]
[connection signal="update_healthbar" from="PlayersList/Ceru Star" to="GUI/UI/HealthPlayerContainer" method="_on_Ceru_Star_update_healthbar"]
